# gitdo

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.gitracker/: tasks.json
scripts/: release.sh
src/gitdo/: __init__.py  cli.py  markdown_parser.py  models.py  storage.py
src/gitrack/: __init__.py  cli.py  models.py  storage.py
tests/: __init__.py  conftest.py  test_cli.py  test_markdown_parser.py  test_models.py  test_storage.py
